# qiwo-sync-core

./: .gitignore  .gitmodules  Cargo.toml  PRD.md  Qiwo.Sync.sln  README.md  package-lock.json  platforms.md
.cargo/: config.toml
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-windows.yml  ci.yml  release.yml
qiwo-rime-sync/: Cargo.toml
qiwo-rime-sync/src/: main.rs
qiwo-squirrel/: Makefile
qiwo-sync/: Cargo.toml
qiwo-sync/src/: file_selector.rs  frost_init.rs  installation.rs  jni_bridge.rs  lib.rs  sync_engine.rs  types.rs  webdav_client.rs
src/Qiwo.Sync.Core/: FileSelector.cs  Frontend.cs  FrostInitializer.cs  InstallationHelper.cs  LocalFileStore.cs  ManifestStore.cs  PathUtil.cs  SyncConstants.cs  SyncEngine.cs  SyncFileEntry.cs  SyncJsonContext.cs  SyncManifest.cs  SyncMode.cs  SyncRequest.cs  SyncSummary.cs  WebDavClient.cs  WebDavEntry.cs
src/qiwo-rime-sync/: Program.cs  qiwo-rime-sync.csproj
