[package]
name = "qiwo-sync"
version = "0.1.0"
edition = "2024"
description = "Qiwo sync core library — WebDAV-based Rime configuration and user dictionary sync"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
walkdir = "2"

[lib]
name = "qiwo_sync"
crate-type = ["lib", "cdylib"]
